--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,10 +103,10 @@ services:
       - ./grafana/dashboards:/etc/grafana/dashboards
       - ./grafana/setup.sh:/setup.sh
     entrypoint: /setup.sh
-    environment:
-      - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
-      - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
-      - GF_USERS_ALLOW_SIGN_UP=false
+  #  environment:
+   #   - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
+    #  - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
+     # - GF_USERS_ALLOW_SIGN_UP=false
     restart: unless-stopped
     expose:
       - 3000
