--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,11 +97,11 @@ services:
     #image: grafana/grafana:6.4.3
     image: registry.gitlab.com/deanet/docker-dgp:grafana
     container_name: grafana
-    #volumes:
-     # - grafana_data:/var/lib/grafana
-      #- ./grafana/datasources:/etc/grafana/datasources
-      #- ./grafana/dashboards:/etc/grafana/dashboards
-      #- ./grafana/setup.sh:/setup.sh
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - ./grafana/datasources:/etc/grafana/datasources
+      - ./grafana/dashboards:/etc/grafana/dashboards
+      - ./grafana/setup.sh:/setup.sh
     entrypoint: /setup.sh
   #  environment:
    #   - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
